# calisthenics-coach

./: .gitignore  README.md  calisthenics_coach.py  env.example  main.py  pyproject.toml  requirements.txt
